--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="mainbox">
         <div class="first">
-            <img  class= "img1" id="imgid" src="images/box-removebg-preview.png" alt="" style="margin-left=100 px" ><br>
+            <img  class= "img1" id="imgid" src="images/box-removebg-preview.png" alt=""  ><br>
            <h1> I have surprise for Youu! <br>
             Click on <b>THE BOX!</b></h1>
         </div>
