--- a/second.html
+++ b/second.html
@@ -87,7 +87,7 @@
     <div class="heart">
         <div class="box1">
             <div id="circle"></div>
-            <h1>Hii Soneyo</h1>
+            <h1>Hii Sohneyo</h1>
             <div class="messagebox">
              <div id="message"></div>
              </div>
