--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="mainbox">
         <div class="first">
-            <img  class= "img1" id="imgid" src="images/box-removebg-preview.png" alt=""  ><br>
-           <h2> I have surprise for Youu! <br>
-            Click on <b>THE BOX!</b></h2>
+            <img  class= "img1" id="imgid" src="images/box-removebg-preview.png" alt="" ><br>
+           <h1> I have surprise Youu! <br>
+            Click on <b>THE BOX!</b></h1>
         </div>
     </div>
 </body>
