--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="mainbox">
         <div class="first">
             <img  class= "img1" id="imgid" src="images/box-removebg-preview.png" alt="" ><br>
-           <h1> I have surprise Youu! <br>
+           <h1> I have surprise For Youu! <br>
             Click on <b>THE BOX!</b></h1>
         </div>
     </div>
